
// NOTE: This code is generated. DO NOT EDIT!!
syntax = "proto3";

package com.oracle.infy.test;


service SomeService {

  // DO NOT EDIT! (this code is generated)
  rpc method(GrpcRequest) returns (GrpcResponse) {}
}



// DO NOT EDIT! (this code is generated)
message GrpcResponse {
  GrpcOptionOptionRequest field = 1;
}

// DO NOT EDIT! (this code is generated)
message GrpcRequest {
  GrpcOptionString field = 1;
}

// DO NOT EDIT! (this code is generated)
message GrpcOptionString {
  oneof sealed_value {
    GrpcNoneString a = 1;
    GrpcSomeString b = 2;
  }
}

// DO NOT EDIT! (this code is generated)
message GrpcNoneString {

}

// DO NOT EDIT! (this code is generated)
message GrpcSomeString {
  string value = 1;
}

// DO NOT EDIT! (this code is generated)
message GrpcOptionOptionRequest {
  oneof sealed_value {
    GrpcNoneNoneRequest a = 1;
    GrpcSomeSomeRequest b = 2;
    GrpcSomeNoneRequest c = 3;
  }
}

// DO NOT EDIT! (this code is generated)
message GrpcNoneNoneRequest {

}

// DO NOT EDIT! (this code is generated)
message GrpcSomeSomeRequest {
  GrpcRequest value = 1;
}

// DO NOT EDIT! (this code is generated)
message GrpcSomeNoneRequest {

}

